# Esp32S3WifiEmbassy

./: .gitignore  .gitmodules  Cargo.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: application_layer.rs  configuration.rs  hardware.rs  main.rs
src/configuration/: http.rs  mod.rs
src/execution/: hardware.rs  http.rs  mod.rs
src/peripherals/: pmu.rs
