[package]
name = "wifi-connect"
version = "0.1.0"
authors = ["vincent <vlefebvre@abbelight.com>"]
edition = "2021"
license = "MIT"

[dependencies]

embassy-executor = { version = "0.7.0", features = ["arch-riscv32"]}
embedded-io-async = "0.6.1"
embassy-net = { version = "0.6.0", features = ["proto-ipv6", "tcp", "medium-ip", "dhcpv4"] }
embassy-time = "0.4.0"
# embassy-time-driver = "0.2.0"
esp-alloc = "0.6.0"
esp-backtrace = { version = "0.15.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-hal = { version = "0.23.1", features = ["esp32s3", "__esp_hal_embassy"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3", "executors"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
esp-wifi = { version = "0.12.0", features = [ "esp32s3",  "utils", "wifi"] }
httparse = {version = "1.10.0",  features = [],default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] , default-features = false }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
powershell_script = "1.0.0"

